refactor: organize development tools and improve documentation
- Move development scripts to dev_tools/ directory
- Create comprehensive blogTools.md guide
- Update .gitignore to only exclude sensitive files
- Create app.example.py template
- Update README with accurate project structure
- Keep dev tools in version control for cross-machine development

--- a/.gitignore
+++ b/.gitignore
@@ -8,17 +8,12 @@ instance/
 *.db
 app.py  # Contains sensitive configuration
 
-# Development files
-setup_admin.py
-import_post.py
-create_admin.py
-check_db.py
-generate_static.py
-callback.html
-
 # Environment
 .env
 .venv
 env/
 venv/
 ENV/
+
+# Misc
+callback.html
